[package]
name = "ton-api-migration-utility"
version = "0.1.0"
edition = "2018"

[dependencies]
chacha20poly1305 = "0.9.0"
anyhow = "1.0.38"
argon2 = "0.3.1"
async-trait = "0.1"
base64 = "*"
bigdecimal = { version = "0.2.0", features = ["serde"] }
block-modes = "*"
chrono = { version = "*", features = ["serde"] }
clap = "3.0.0-beta.4"
csv = "*"
derive_more = "*"
ed25519-dalek = { git = "https://github.com/broxus/ed25519-dalek.git" }
env_logger = "0.8.4"
futures = { version = "0.3" }
hex = "*"
hmac = "*"
lazy_static = "1.4.0"
log = { version = "0.4", features = ["std", "serde"] }
num-bigint = "0.3.2"
num-traits = "0.2.14"
once_cell = "1.8"
pin-project = "0.4"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8.17"
sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "postgres", "uuid", "bigdecimal", "offline", "chrono", "json"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "0.8", features = ["v4", "serde"] }