[package]
name = "ton-api-utility"
version = "0.1.0"
edition = "2021"
authors = ["Broxus team"]
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
argh = "0.1"
argon2 = "0.3.1"
async-trait = "0.1"
base64 = "*"
bigdecimal = { version = "0.2.0", features = ["serde"] }
chacha20poly1305 = "0.9.0"
chrono = { version = "*", features = ["serde"] }
futures = { version = "0.3" }
num-bigint = "0.3.2"
num-traits = "0.2.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "postgres", "uuid", "bigdecimal", "offline", "chrono", "json"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "0.8", features = ["v4", "serde"] }
